[package]
name = "mdflc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.0"
easy-sgr = "0.1"
miette = { version = "7.2", features = ["fancy"] }
pulldown-cmark = { version = "0.11", features = [] }
tokio = { version = "1.38", features = ["full"] }
walkdir = "2.5"
watchexec = "4.1"
watchexec-signals = "3.0"
webbrowser = "1.0"
